--- a/app/src/main/res/layout/signin.xml
+++ b/app/src/main/res/layout/signin.xml
@@ -1,6 +1,136 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
+
+    <RelativeLayout
+        android:id="@+id/logo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="125dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="75dp"
+            android:src="@drawable/welcome_image"/>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/email_form_login"
+        android:layout_below="@id/logo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="30dp"
+        android:layout_marginLeft="44dp"
+        android:layout_marginRight="44dp">
+        <TextView
+            android:id="@+id/email_fill"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Email"
+            android:textColor="@color/primary"
+            android:textSize="20dp" />
+        <EditText
+            android:id="@+id/email_box"
+            android:layout_below="@id/email_fill"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Input Email"
+            android:textColor="#FF4D8AF0"
+            android:textColorHint="#D9D9D9"
+            android:textSize="20dp"
+            android:padding="10dp"
+            android:width="352dp"
+            android:height="73dp"
+            android:background="@drawable/input_box"
+            />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/password_form_login"
+        android:layout_below="@id/email_form_login"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="44dp"
+        android:layout_marginRight="44dp">
+        <TextView
+            android:id="@+id/password_fill"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Password"
+            android:textSize="20dp"
+            android:textColor="@color/primary"/>
+        <EditText
+            android:id="@+id/password_box"
+            android:layout_below="@id/password_fill"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Input Password"
+            android:textColor="#FF4D8AF0"
+            android:textColorHint="#D9D9D9"
+            android:textSize="20dp"
+            android:padding="10dp"
+            android:width="352dp"
+            android:height="73dp"
+            android:background="@drawable/input_box" />
+    </RelativeLayout>
+    <TextView
+        android:id="@+id/forget_password"
+        android:layout_below="@id/password_form_login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:text="Forget password ?"/>
+
+    <Button
+        android:id="@+id/login_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/forget_password"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:width="200dp"
+        android:backgroundTint="@color/primary"
+        android:text="Login"
+        app:cornerRadius="20dp" />
+    <View
+        android:id="@+id/line"
+        android:layout_below="@id/login_button"
+        android:layout_width="352dp"
+        android:layout_height="1dp"
+        android:background="#D9D9D9"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"/>
+    <LinearLayout
+        android:id="@+id/icon"
+        android:layout_below="@id/line"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        >
+        <ImageView
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:src="@drawable/facebook_icon"
+            android:layout_margin="20dp"/>
+        <ImageView
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:src="@drawable/google_icon"
+            android:layout_margin="20dp"/>
+    </LinearLayout>
+    <TextView
+        android:layout_below="@id/icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Do not have account ?"
+        android:textSize="20dp"
+        android:textColor="@color/primary"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="30dp"/>
+
 
 </RelativeLayout>
