--- a/app/src/main/res/layout/signin.xml
+++ b/app/src/main/res/layout/signin.xml
@@ -122,15 +122,16 @@
             android:src="@drawable/google_icon"
             android:layout_margin="20dp"/>
     </LinearLayout>
+
     <TextView
-        android:layout_below="@id/icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Do not have account ?"
-        android:textSize="20dp"
-        android:textColor="@color/primary"
+        android:layout_below="@id/icon"
         android:layout_centerInParent="true"
-        android:layout_marginTop="30dp"/>
+        android:layout_marginTop="30dp"
+        android:text="Do not have account ?"
+        android:textColor="@color/primary"
+        android:textSize="20dp" />
 
 
 </RelativeLayout>
