--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -263,6 +263,10 @@
 
 
         </RelativeLayout>
+<ImageView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
+</ImageView>
     </RelativeLayout>
 </RelativeLayout>
