--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
+        android:background="@drawable/nav_conner"
         app:backgroundTint="#FFFFFF">
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
