--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -4,15 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/white"
     >
 
     <RelativeLayout
+        android:id="@+id/done"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/done"
 
-        android:layout_marginTop="25dp"
-        >
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="1dp">
 
 
         <RelativeLayout
@@ -39,10 +41,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
+                android:layout_centerInParent="true"
                 android:layout_marginEnd="20dp"
                 android:gravity="center_horizontal"
                 android:text="Done"
-                android:layout_centerInParent="true"
                 android:textColor="@color/black"
                 android:textSize="25dp">
 
@@ -99,10 +101,10 @@
             android:layout_marginTop="300dp">
 
             <RelativeLayout
+                android:id="@+id/name"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_alignParentTop="true"
-                android:id="@+id/name"
                 android:background="@drawable/border"
 
                 >
@@ -140,8 +142,6 @@
                 android:layout_below="@id/name"
 
 
-
-
                 >
 
                 <TextView
@@ -155,14 +155,15 @@
                     android:textSize="18dp">
 
                 </TextView>
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Male"
-                    android:textSize="20dp"
-                    android:layout_centerInParent="true"
                     android:layout_alignParentEnd="true"
-                    android:layout_marginEnd="20dp">
+                    android:layout_centerInParent="true"
+                    android:layout_marginEnd="20dp"
+                    android:text="Male"
+                    android:textSize="20dp">
 
                 </TextView>
             </RelativeLayout>
@@ -172,8 +173,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_below="@+id/sex"
-                android:background="@drawable/border"
-                >
+                android:background="@drawable/border">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -186,14 +186,15 @@
                     android:textSize="18dp">
 
                 </TextView>
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="01234567"
-                    android:textSize="20dp"
-                    android:layout_centerInParent="true"
                     android:layout_alignParentEnd="true"
-                    android:layout_marginEnd="20dp">
+                    android:layout_centerInParent="true"
+                    android:layout_marginEnd="20dp"
+                    android:text="01234567"
+                    android:textSize="20dp">
 
                 </TextView>
 
@@ -230,6 +231,7 @@
                 </TextView>
 
             </RelativeLayout>
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
