--- a/app/src/main/res/layout/scholarship.xml
+++ b/app/src/main/res/layout/scholarship.xml
@@ -1,38 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
     android:padding="20dp">
-
-    <TextView
-        android:id="@+id/title_scholarship"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Scholarship"
-        android:textSize="25dp"/>
-    <RelativeLayout
-        android:layout_below="@id/title_scholarship"
-        android:layout_width="wrap_content"
-        android:layout_height="140dp"
-        android:layout_marginTop="30dp"
-        android:background="@drawable/subject_conner">
+        android:orientation="vertical">
 
         <TextView
-            android:layout_width="300dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:padding="20dp"
-            android:text="Hello all, Today we have to inform you that our shcool just drop scholarship for student who just finished grade 12"/>
+            android:text="Scholarship"
+            android:layout_marginBottom="20dp"
+            android:textSize="25dp"/>
 
-        <ImageView
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_marginEnd="10dp"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/welcome_image"/>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/scholarship"
+            android:layout_width="match_parent"
+            android:layout_height="679dp" />
 
-    </RelativeLayout>
+    </LinearLayout>
 
-</RelativeLayout>
+
+</ScrollView>
