--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:title="home"
         android:id="@+id/home"
-        android:icon="@drawable/home_icon"/>
+        android:icon="@drawable/home_icon"
+        android:title="home" />
     <item
-        android:title="Scholarship"
         android:id="@+id/scholarship"
-        android:icon="@drawable/scholarship_icon"/>
+        android:icon="@drawable/scholarship_icon"
+        android:title="Scholarship" />
     <item
-        android:title="Test"
         android:id="@+id/test"
-        android:icon="@drawable/test_icon"/>
+        android:icon="@drawable/test_icon"
+        android:title="Test" />
     <item
-        android:title="Account"
         android:id="@+id/profile"
-        android:icon="@drawable/profile_icon"/>
+        android:icon="@drawable/profile_icon"
+        android:title="Account" />
 
 </menu>
