--- a/app/src/main/res/layout/activity_subject_detail_pdf.xml
+++ b/app/src/main/res/layout/activity_subject_detail_pdf.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity_subject_detail_pdf">
-
+    tools:context=".itemDetail.SubjectDetailPDF">
 
     <LinearLayout
         android:id="@+id/laoutcontent"
@@ -32,16 +31,15 @@
             android:text="Product Name:"
             android:textSize="20sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/profile_image"        app:layout_constraintTop_toBottomOf="@+id/profile_image" />
+            app:layout_constraintStart_toStartOf="@+id/profile_image"
+            app:layout_constraintTop_toBottomOf="@+id/profile_image" />
 
         <TextView
             android:id="@+id/txt_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Name"
-            android:textColor="@color/black"
-            app:layout_constraintStart_toStartOf="@id/txt_name"
-            app:layout_constraintTop_toBottomOf="@+id/txt_name"
+            android:textColor="@android:color/black"
             android:textSize="14sp" />
 
         <TextView
@@ -50,18 +48,16 @@
             android:text="Price:"
             android:textSize="20sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/profile_image"        app:layout_constraintTop_toBottomOf="@+id/profile_image" />
+            app:layout_constraintStart_toStartOf="@+id/profile_image"
+            app:layout_constraintTop_toBottomOf="@+id/profile_image" />
 
         <TextView
             android:id="@+id/txt_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Price"
-            android:textColor="@color/black"
-            app:layout_constraintStart_toStartOf="@id/txt_name"
-            app:layout_constraintTop_toBottomOf="@+id/txt_name"
+            android:textColor="@android:color/black"
             android:textSize="14sp" />
-
 
         <TextView
             android:layout_width="wrap_content"
@@ -69,20 +65,17 @@
             android:text="Detail"
             android:textSize="20sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/profile_image"        app:layout_constraintTop_toBottomOf="@+id/profile_image" />
+            app:layout_constraintStart_toStartOf="@+id/profile_image"
+            app:layout_constraintTop_toBottomOf="@+id/profile_image" />
 
         <TextView
             android:id="@+id/txt_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Description"
-            android:textColor="@color/black"
-            app:layout_constraintStart_toStartOf="@id/txt_name"
-            app:layout_constraintTop_toBottomOf="@+id/txt_name"
+            android:textColor="@android:color/black"
             android:textSize="14sp" />
 
-
     </LinearLayout>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
