--- a/app/src/main/res/layout/activity_test_pdf.xml
+++ b/app/src/main/res/layout/activity_test_pdf.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    android:orientation="vertical">
 
-    <WebView
-        android:id="@+id/web"
+    <com.github.barteksc.pdfviewer.PDFView
+        android:id="@+id/testPDF"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-
-</LinearLayout>
+        android:layout_height="match_parent"/>
+</RelativeLayout>
