--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -88,10 +88,7 @@
             android:id="@+id/science_subject"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:orientation="horizontal"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            app:spanCount="3" />
+            android:layout_marginLeft="20dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -133,11 +130,15 @@
             android:layout_marginLeft="20dp"/>
 
         <Button
-            android:id="@+id/testPDF"
-            android:layout_marginTop="20dp"
+            android:id="@+id/btn_open_pdf"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="test pdf"/>
+            android:text="Open PDF"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
 
 
     </LinearLayout>
