--- a/app/src/main/res/layout/science_modal.xml
+++ b/app/src/main/res/layout/science_modal.xml
@@ -1,33 +1,33 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!-- science_modal.xml -->
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="160dp"
     android:layout_height="160dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="10dp"
     app:cardCornerRadius="30dp"
-    >
+    android:gravity="center"> <!-- Center the LinearLayout within the CardView -->
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center"
-        android:layout_margin="20dp">
+        android:layout_marginTop="55dp">
 
-
+        <!-- Uncomment if you need the image view -->
+        <!--
         <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/science_subject_img"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:src="@drawable/welcome_image" />
+        -->
 
         <TextView
             android:id="@+id/science_subject_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Khmer"
-            />
-
-
+            android:textSize="35dp"
+            android:text="Khmer" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
